// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VApp.js should allow a custom id 1`] = `

<div data-app="true"
     class="application theme--light"
     id="inspire"
>
  <div class="application--wrap">
  </div>
</div>

`;

exports[`VApp.js should match a snapshot 1`] = `

<div data-app="true"
     class="application theme--light"
     id="app"
>
  <div class="application--wrap">
  </div>
</div>

`;

exports[`VApp.js should watch theme 1`] = `
<style
  id="vuetify-theme-stylesheet"
  type="text/css"
>
  a { color: #1976d2; }
.primary {
  background-color: #1976d2 !important;
  border-color: #1976d2 !important;
}
.primary--text {
  color: #1976d2 !important;
}
.primary--text input,
.primary--text textarea {
  caret-color: #1976d2 !important;
}
.primary.lighten-1 {
  background-color: #c7fdff !important;
  border-color: #c7fdff !important;
}
.primary--text.text--lighten-1 {
  color: #c7fdff !important;
}
.primary--text.text--lighten-1 input,
.primary--text.text--lighten-1 textarea {
  caret-color: #c7fdff !important;
}
.primary.lighten-2 {
  background-color: #a8e0ff !important;
  border-color: #a8e0ff !important;
}
.primary--text.text--lighten-2 {
  color: #a8e0ff !important;
}
.primary--text.text--lighten-2 input,
.primary--text.text--lighten-2 textarea {
  caret-color: #a8e0ff !important;
}
.primary.lighten-3 {
  background-color: #8ac5ff !important;
  border-color: #8ac5ff !important;
}
.primary--text.text--lighten-3 {
  color: #8ac5ff !important;
}
.primary--text.text--lighten-3 input,
.primary--text.text--lighten-3 textarea {
  caret-color: #8ac5ff !important;
}
.primary.lighten-4 {
  background-color: #6aaaff !important;
  border-color: #6aaaff !important;
}
.primary--text.text--lighten-4 {
  color: #6aaaff !important;
}
.primary--text.text--lighten-4 input,
.primary--text.text--lighten-4 textarea {
  caret-color: #6aaaff !important;
}
.primary.lighten-5 {
  background-color: #488fef !important;
  border-color: #488fef !important;
}
.primary--text.text--lighten-5 {
  color: #488fef !important;
}
.primary--text.text--lighten-5 input,
.primary--text.text--lighten-5 textarea {
  caret-color: #488fef !important;
}
.primary.darken-1 {
  background-color: #005eb6 !important;
  border-color: #005eb6 !important;
}
.primary--text.text--darken-1 {
  color: #005eb6 !important;
}
.primary--text.text--darken-1 input,
.primary--text.text--darken-1 textarea {
  caret-color: #005eb6 !important;
}
.primary.darken-2 {
  background-color: #00479b !important;
  border-color: #00479b !important;
}
.primary--text.text--darken-2 {
  color: #00479b !important;
}
.primary--text.text--darken-2 input,
.primary--text.text--darken-2 textarea {
  caret-color: #00479b !important;
}
.primary.darken-3 {
  background-color: #003180 !important;
  border-color: #003180 !important;
}
.primary--text.text--darken-3 {
  color: #003180 !important;
}
.primary--text.text--darken-3 input,
.primary--text.text--darken-3 textarea {
  caret-color: #003180 !important;
}
.primary.darken-4 {
  background-color: #001e67 !important;
  border-color: #001e67 !important;
}
.primary--text.text--darken-4 {
  color: #001e67 !important;
}
.primary--text.text--darken-4 input,
.primary--text.text--darken-4 textarea {
  caret-color: #001e67 !important;
}
.secondary {
  background-color: #424242 !important;
  border-color: #424242 !important;
}
.secondary--text {
  color: #424242 !important;
}
.secondary--text input,
.secondary--text textarea {
  caret-color: #424242 !important;
}
.secondary.lighten-1 {
  background-color: #c1c1c1 !important;
  border-color: #c1c1c1 !important;
}
.secondary--text.text--lighten-1 {
  color: #c1c1c1 !important;
}
.secondary--text.text--lighten-1 input,
.secondary--text.text--lighten-1 textarea {
  caret-color: #c1c1c1 !important;
}
.secondary.lighten-2 {
  background-color: #a6a6a6 !important;
  border-color: #a6a6a6 !important;
}
.secondary--text.text--lighten-2 {
  color: #a6a6a6 !important;
}
.secondary--text.text--lighten-2 input,
.secondary--text.text--lighten-2 textarea {
  caret-color: #a6a6a6 !important;
}
.secondary.lighten-3 {
  background-color: #8b8b8b !important;
  border-color: #8b8b8b !important;
}
.secondary--text.text--lighten-3 {
  color: #8b8b8b !important;
}
.secondary--text.text--lighten-3 input,
.secondary--text.text--lighten-3 textarea {
  caret-color: #8b8b8b !important;
}
.secondary.lighten-4 {
  background-color: #727272 !important;
  border-color: #727272 !important;
}
.secondary--text.text--lighten-4 {
  color: #727272 !important;
}
.secondary--text.text--lighten-4 input,
.secondary--text.text--lighten-4 textarea {
  caret-color: #727272 !important;
}
.secondary.lighten-5 {
  background-color: #595959 !important;
  border-color: #595959 !important;
}
.secondary--text.text--lighten-5 {
  color: #595959 !important;
}
.secondary--text.text--lighten-5 input,
.secondary--text.text--lighten-5 textarea {
  caret-color: #595959 !important;
}
.secondary.darken-1 {
  background-color: #2c2c2c !important;
  border-color: #2c2c2c !important;
}
.secondary--text.text--darken-1 {
  color: #2c2c2c !important;
}
.secondary--text.text--darken-1 input,
.secondary--text.text--darken-1 textarea {
  caret-color: #2c2c2c !important;
}
.secondary.darken-2 {
  background-color: #171717 !important;
  border-color: #171717 !important;
}
.secondary--text.text--darken-2 {
  color: #171717 !important;
}
.secondary--text.text--darken-2 input,
.secondary--text.text--darken-2 textarea {
  caret-color: #171717 !important;
}
.secondary.darken-3 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-3 {
  color: #000000 !important;
}
.secondary--text.text--darken-3 input,
.secondary--text.text--darken-3 textarea {
  caret-color: #000000 !important;
}
.secondary.darken-4 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-4 {
  color: #000000 !important;
}
.secondary--text.text--darken-4 input,
.secondary--text.text--darken-4 textarea {
  caret-color: #000000 !important;
}
.accent {
  background-color: #82b1ff !important;
  border-color: #82b1ff !important;
}
.accent--text {
  color: #82b1ff !important;
}
.accent--text input,
.accent--text textarea {
  caret-color: #82b1ff !important;
}
.accent.lighten-1 {
  background-color: #ffffff !important;
  border-color: #ffffff !important;
}
.accent--text.text--lighten-1 {
  color: #ffffff !important;
}
.accent--text.text--lighten-1 input,
.accent--text.text--lighten-1 textarea {
  caret-color: #ffffff !important;
}
.accent.lighten-2 {
  background-color: #f8ffff !important;
  border-color: #f8ffff !important;
}
.accent--text.text--lighten-2 {
  color: #f8ffff !important;
}
.accent--text.text--lighten-2 input,
.accent--text.text--lighten-2 textarea {
  caret-color: #f8ffff !important;
}
.accent.lighten-3 {
  background-color: #daffff !important;
  border-color: #daffff !important;
}
.accent--text.text--lighten-3 {
  color: #daffff !important;
}
.accent--text.text--lighten-3 input,
.accent--text.text--lighten-3 textarea {
  caret-color: #daffff !important;
}
.accent.lighten-4 {
  background-color: #bce8ff !important;
  border-color: #bce8ff !important;
}
.accent--text.text--lighten-4 {
  color: #bce8ff !important;
}
.accent--text.text--lighten-4 input,
.accent--text.text--lighten-4 textarea {
  caret-color: #bce8ff !important;
}
.accent.lighten-5 {
  background-color: #9fccff !important;
  border-color: #9fccff !important;
}
.accent--text.text--lighten-5 {
  color: #9fccff !important;
}
.accent--text.text--lighten-5 input,
.accent--text.text--lighten-5 textarea {
  caret-color: #9fccff !important;
}
.accent.darken-1 {
  background-color: #6596e2 !important;
  border-color: #6596e2 !important;
}
.accent--text.text--darken-1 {
  color: #6596e2 !important;
}
.accent--text.text--darken-1 input,
.accent--text.text--darken-1 textarea {
  caret-color: #6596e2 !important;
}
.accent.darken-2 {
  background-color: #467dc6 !important;
  border-color: #467dc6 !important;
}
.accent--text.text--darken-2 {
  color: #467dc6 !important;
}
.accent--text.text--darken-2 input,
.accent--text.text--darken-2 textarea {
  caret-color: #467dc6 !important;
}
.accent.darken-3 {
  background-color: #2364aa !important;
  border-color: #2364aa !important;
}
.accent--text.text--darken-3 {
  color: #2364aa !important;
}
.accent--text.text--darken-3 input,
.accent--text.text--darken-3 textarea {
  caret-color: #2364aa !important;
}
.accent.darken-4 {
  background-color: #004c90 !important;
  border-color: #004c90 !important;
}
.accent--text.text--darken-4 {
  color: #004c90 !important;
}
.accent--text.text--darken-4 input,
.accent--text.text--darken-4 textarea {
  caret-color: #004c90 !important;
}
.error {
  background-color: #ff5252 !important;
  border-color: #ff5252 !important;
}
.error--text {
  color: #ff5252 !important;
}
.error--text input,
.error--text textarea {
  caret-color: #ff5252 !important;
}
.error.lighten-1 {
  background-color: #ffe4d5 !important;
  border-color: #ffe4d5 !important;
}
.error--text.text--lighten-1 {
  color: #ffe4d5 !important;
}
.error--text.text--lighten-1 input,
.error--text.text--lighten-1 textarea {
  caret-color: #ffe4d5 !important;
}
.error.lighten-2 {
  background-color: #ffc6b9 !important;
  border-color: #ffc6b9 !important;
}
.error--text.text--lighten-2 {
  color: #ffc6b9 !important;
}
.error--text.text--lighten-2 input,
.error--text.text--lighten-2 textarea {
  caret-color: #ffc6b9 !important;
}
.error.lighten-3 {
  background-color: #ffa99e !important;
  border-color: #ffa99e !important;
}
.error--text.text--lighten-3 {
  color: #ffa99e !important;
}
.error--text.text--lighten-3 input,
.error--text.text--lighten-3 textarea {
  caret-color: #ffa99e !important;
}
.error.lighten-4 {
  background-color: #ff8c84 !important;
  border-color: #ff8c84 !important;
}
.error--text.text--lighten-4 {
  color: #ff8c84 !important;
}
.error--text.text--lighten-4 input,
.error--text.text--lighten-4 textarea {
  caret-color: #ff8c84 !important;
}
.error.lighten-5 {
  background-color: #ff6f6a !important;
  border-color: #ff6f6a !important;
}
.error--text.text--lighten-5 {
  color: #ff6f6a !important;
}
.error--text.text--lighten-5 input,
.error--text.text--lighten-5 textarea {
  caret-color: #ff6f6a !important;
}
.error.darken-1 {
  background-color: #df323b !important;
  border-color: #df323b !important;
}
.error--text.text--darken-1 {
  color: #df323b !important;
}
.error--text.text--darken-1 input,
.error--text.text--darken-1 textarea {
  caret-color: #df323b !important;
}
.error.darken-2 {
  background-color: #bf0025 !important;
  border-color: #bf0025 !important;
}
.error--text.text--darken-2 {
  color: #bf0025 !important;
}
.error--text.text--darken-2 input,
.error--text.text--darken-2 textarea {
  caret-color: #bf0025 !important;
}
.error.darken-3 {
  background-color: #9f0010 !important;
  border-color: #9f0010 !important;
}
.error--text.text--darken-3 {
  color: #9f0010 !important;
}
.error--text.text--darken-3 input,
.error--text.text--darken-3 textarea {
  caret-color: #9f0010 !important;
}
.error.darken-4 {
  background-color: #800000 !important;
  border-color: #800000 !important;
}
.error--text.text--darken-4 {
  color: #800000 !important;
}
.error--text.text--darken-4 input,
.error--text.text--darken-4 textarea {
  caret-color: #800000 !important;
}
.info {
  background-color: #2196f3 !important;
  border-color: #2196f3 !important;
}
.info--text {
  color: #2196f3 !important;
}
.info--text input,
.info--text textarea {
  caret-color: #2196f3 !important;
}
.info.lighten-1 {
  background-color: #d4ffff !important;
  border-color: #d4ffff !important;
}
.info--text.text--lighten-1 {
  color: #d4ffff !important;
}
.info--text.text--lighten-1 input,
.info--text.text--lighten-1 textarea {
  caret-color: #d4ffff !important;
}
.info.lighten-2 {
  background-color: #b5ffff !important;
  border-color: #b5ffff !important;
}
.info--text.text--lighten-2 {
  color: #b5ffff !important;
}
.info--text.text--lighten-2 input,
.info--text.text--lighten-2 textarea {
  caret-color: #b5ffff !important;
}
.info.lighten-3 {
  background-color: #95e8ff !important;
  border-color: #95e8ff !important;
}
.info--text.text--lighten-3 {
  color: #95e8ff !important;
}
.info--text.text--lighten-3 input,
.info--text.text--lighten-3 textarea {
  caret-color: #95e8ff !important;
}
.info.lighten-4 {
  background-color: #75ccff !important;
  border-color: #75ccff !important;
}
.info--text.text--lighten-4 {
  color: #75ccff !important;
}
.info--text.text--lighten-4 input,
.info--text.text--lighten-4 textarea {
  caret-color: #75ccff !important;
}
.info.lighten-5 {
  background-color: #51b0ff !important;
  border-color: #51b0ff !important;
}
.info--text.text--lighten-5 {
  color: #51b0ff !important;
}
.info--text.text--lighten-5 input,
.info--text.text--lighten-5 textarea {
  caret-color: #51b0ff !important;
}
.info.darken-1 {
  background-color: #007cd6 !important;
  border-color: #007cd6 !important;
}
.info--text.text--darken-1 {
  color: #007cd6 !important;
}
.info--text.text--darken-1 input,
.info--text.text--darken-1 textarea {
  caret-color: #007cd6 !important;
}
.info.darken-2 {
  background-color: #0064ba !important;
  border-color: #0064ba !important;
}
.info--text.text--darken-2 {
  color: #0064ba !important;
}
.info--text.text--darken-2 input,
.info--text.text--darken-2 textarea {
  caret-color: #0064ba !important;
}
.info.darken-3 {
  background-color: #004d9f !important;
  border-color: #004d9f !important;
}
.info--text.text--darken-3 {
  color: #004d9f !important;
}
.info--text.text--darken-3 input,
.info--text.text--darken-3 textarea {
  caret-color: #004d9f !important;
}
.info.darken-4 {
  background-color: #003784 !important;
  border-color: #003784 !important;
}
.info--text.text--darken-4 {
  color: #003784 !important;
}
.info--text.text--darken-4 input,
.info--text.text--darken-4 textarea {
  caret-color: #003784 !important;
}
.success {
  background-color: #4caf50 !important;
  border-color: #4caf50 !important;
}
.success--text {
  color: #4caf50 !important;
}
.success--text input,
.success--text textarea {
  caret-color: #4caf50 !important;
}
.success.lighten-1 {
  background-color: #dcffd6 !important;
  border-color: #dcffd6 !important;
}
.success--text.text--lighten-1 {
  color: #dcffd6 !important;
}
.success--text.text--lighten-1 input,
.success--text.text--lighten-1 textarea {
  caret-color: #dcffd6 !important;
}
.success.lighten-2 {
  background-color: #beffba !important;
  border-color: #beffba !important;
}
.success--text.text--lighten-2 {
  color: #beffba !important;
}
.success--text.text--lighten-2 input,
.success--text.text--lighten-2 textarea {
  caret-color: #beffba !important;
}
.success.lighten-3 {
  background-color: #a2ff9e !important;
  border-color: #a2ff9e !important;
}
.success--text.text--lighten-3 {
  color: #a2ff9e !important;
}
.success--text.text--lighten-3 input,
.success--text.text--lighten-3 textarea {
  caret-color: #a2ff9e !important;
}
.success.lighten-4 {
  background-color: #85e783 !important;
  border-color: #85e783 !important;
}
.success--text.text--lighten-4 {
  color: #85e783 !important;
}
.success--text.text--lighten-4 input,
.success--text.text--lighten-4 textarea {
  caret-color: #85e783 !important;
}
.success.lighten-5 {
  background-color: #69cb69 !important;
  border-color: #69cb69 !important;
}
.success--text.text--lighten-5 {
  color: #69cb69 !important;
}
.success--text.text--lighten-5 input,
.success--text.text--lighten-5 textarea {
  caret-color: #69cb69 !important;
}
.success.darken-1 {
  background-color: #2d9437 !important;
  border-color: #2d9437 !important;
}
.success--text.text--darken-1 {
  color: #2d9437 !important;
}
.success--text.text--darken-1 input,
.success--text.text--darken-1 textarea {
  caret-color: #2d9437 !important;
}
.success.darken-2 {
  background-color: #00791e !important;
  border-color: #00791e !important;
}
.success--text.text--darken-2 {
  color: #00791e !important;
}
.success--text.text--darken-2 input,
.success--text.text--darken-2 textarea {
  caret-color: #00791e !important;
}
.success.darken-3 {
  background-color: #006000 !important;
  border-color: #006000 !important;
}
.success--text.text--darken-3 {
  color: #006000 !important;
}
.success--text.text--darken-3 input,
.success--text.text--darken-3 textarea {
  caret-color: #006000 !important;
}
.success.darken-4 {
  background-color: #004700 !important;
  border-color: #004700 !important;
}
.success--text.text--darken-4 {
  color: #004700 !important;
}
.success--text.text--darken-4 input,
.success--text.text--darken-4 textarea {
  caret-color: #004700 !important;
}
.warning {
  background-color: #ffc107 !important;
  border-color: #ffc107 !important;
}
.warning--text {
  color: #ffc107 !important;
}
.warning--text input,
.warning--text textarea {
  caret-color: #ffc107 !important;
}
.warning.lighten-1 {
  background-color: #ffffae !important;
  border-color: #ffffae !important;
}
.warning--text.text--lighten-1 {
  color: #ffffae !important;
}
.warning--text.text--lighten-1 input,
.warning--text.text--lighten-1 textarea {
  caret-color: #ffffae !important;
}
.warning.lighten-2 {
  background-color: #ffff91 !important;
  border-color: #ffff91 !important;
}
.warning--text.text--lighten-2 {
  color: #ffff91 !important;
}
.warning--text.text--lighten-2 input,
.warning--text.text--lighten-2 textarea {
  caret-color: #ffff91 !important;
}
.warning.lighten-3 {
  background-color: #ffff74 !important;
  border-color: #ffff74 !important;
}
.warning--text.text--lighten-3 {
  color: #ffff74 !important;
}
.warning--text.text--lighten-3 input,
.warning--text.text--lighten-3 textarea {
  caret-color: #ffff74 !important;
}
.warning.lighten-4 {
  background-color: #fff956 !important;
  border-color: #fff956 !important;
}
.warning--text.text--lighten-4 {
  color: #fff956 !important;
}
.warning--text.text--lighten-4 input,
.warning--text.text--lighten-4 textarea {
  caret-color: #fff956 !important;
}
.warning.lighten-5 {
  background-color: #ffdd37 !important;
  border-color: #ffdd37 !important;
}
.warning--text.text--lighten-5 {
  color: #ffdd37 !important;
}
.warning--text.text--lighten-5 input,
.warning--text.text--lighten-5 textarea {
  caret-color: #ffdd37 !important;
}
.warning.darken-1 {
  background-color: #e0a600 !important;
  border-color: #e0a600 !important;
}
.warning--text.text--darken-1 {
  color: #e0a600 !important;
}
.warning--text.text--darken-1 input,
.warning--text.text--darken-1 textarea {
  caret-color: #e0a600 !important;
}
.warning.darken-2 {
  background-color: #c18c00 !important;
  border-color: #c18c00 !important;
}
.warning--text.text--darken-2 {
  color: #c18c00 !important;
}
.warning--text.text--darken-2 input,
.warning--text.text--darken-2 textarea {
  caret-color: #c18c00 !important;
}
.warning.darken-3 {
  background-color: #a27300 !important;
  border-color: #a27300 !important;
}
.warning--text.text--darken-3 {
  color: #a27300 !important;
}
.warning--text.text--darken-3 input,
.warning--text.text--darken-3 textarea {
  caret-color: #a27300 !important;
}
.warning.darken-4 {
  background-color: #855a00 !important;
  border-color: #855a00 !important;
}
.warning--text.text--darken-4 {
  color: #855a00 !important;
}
.warning--text.text--darken-4 input,
.warning--text.text--darken-4 textarea {
  caret-color: #855a00 !important;
}
</style>
`;

exports[`VApp.js should watch theme 2`] = `
<style
  id="vuetify-theme-stylesheet"
  type="text/css"
>
  a { color: #000000; }
.primary {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text {
  color: #000000 !important;
}
.primary--text input,
.primary--text textarea {
  caret-color: #000000 !important;
}
.primary.lighten-1 {
  background-color: #777777 !important;
  border-color: #777777 !important;
}
.primary--text.text--lighten-1 {
  color: #777777 !important;
}
.primary--text.text--lighten-1 input,
.primary--text.text--lighten-1 textarea {
  caret-color: #777777 !important;
}
.primary.lighten-2 {
  background-color: #5e5e5e !important;
  border-color: #5e5e5e !important;
}
.primary--text.text--lighten-2 {
  color: #5e5e5e !important;
}
.primary--text.text--lighten-2 input,
.primary--text.text--lighten-2 textarea {
  caret-color: #5e5e5e !important;
}
.primary.lighten-3 {
  background-color: #474747 !important;
  border-color: #474747 !important;
}
.primary--text.text--lighten-3 {
  color: #474747 !important;
}
.primary--text.text--lighten-3 input,
.primary--text.text--lighten-3 textarea {
  caret-color: #474747 !important;
}
.primary.lighten-4 {
  background-color: #303030 !important;
  border-color: #303030 !important;
}
.primary--text.text--lighten-4 {
  color: #303030 !important;
}
.primary--text.text--lighten-4 input,
.primary--text.text--lighten-4 textarea {
  caret-color: #303030 !important;
}
.primary.lighten-5 {
  background-color: #1b1b1b !important;
  border-color: #1b1b1b !important;
}
.primary--text.text--lighten-5 {
  color: #1b1b1b !important;
}
.primary--text.text--lighten-5 input,
.primary--text.text--lighten-5 textarea {
  caret-color: #1b1b1b !important;
}
.primary.darken-1 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-1 {
  color: #000000 !important;
}
.primary--text.text--darken-1 input,
.primary--text.text--darken-1 textarea {
  caret-color: #000000 !important;
}
.primary.darken-2 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-2 {
  color: #000000 !important;
}
.primary--text.text--darken-2 input,
.primary--text.text--darken-2 textarea {
  caret-color: #000000 !important;
}
.primary.darken-3 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-3 {
  color: #000000 !important;
}
.primary--text.text--darken-3 input,
.primary--text.text--darken-3 textarea {
  caret-color: #000000 !important;
}
.primary.darken-4 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.primary--text.text--darken-4 {
  color: #000000 !important;
}
.primary--text.text--darken-4 input,
.primary--text.text--darken-4 textarea {
  caret-color: #000000 !important;
}
.secondary {
  background-color: #424242 !important;
  border-color: #424242 !important;
}
.secondary--text {
  color: #424242 !important;
}
.secondary--text input,
.secondary--text textarea {
  caret-color: #424242 !important;
}
.secondary.lighten-1 {
  background-color: #c1c1c1 !important;
  border-color: #c1c1c1 !important;
}
.secondary--text.text--lighten-1 {
  color: #c1c1c1 !important;
}
.secondary--text.text--lighten-1 input,
.secondary--text.text--lighten-1 textarea {
  caret-color: #c1c1c1 !important;
}
.secondary.lighten-2 {
  background-color: #a6a6a6 !important;
  border-color: #a6a6a6 !important;
}
.secondary--text.text--lighten-2 {
  color: #a6a6a6 !important;
}
.secondary--text.text--lighten-2 input,
.secondary--text.text--lighten-2 textarea {
  caret-color: #a6a6a6 !important;
}
.secondary.lighten-3 {
  background-color: #8b8b8b !important;
  border-color: #8b8b8b !important;
}
.secondary--text.text--lighten-3 {
  color: #8b8b8b !important;
}
.secondary--text.text--lighten-3 input,
.secondary--text.text--lighten-3 textarea {
  caret-color: #8b8b8b !important;
}
.secondary.lighten-4 {
  background-color: #727272 !important;
  border-color: #727272 !important;
}
.secondary--text.text--lighten-4 {
  color: #727272 !important;
}
.secondary--text.text--lighten-4 input,
.secondary--text.text--lighten-4 textarea {
  caret-color: #727272 !important;
}
.secondary.lighten-5 {
  background-color: #595959 !important;
  border-color: #595959 !important;
}
.secondary--text.text--lighten-5 {
  color: #595959 !important;
}
.secondary--text.text--lighten-5 input,
.secondary--text.text--lighten-5 textarea {
  caret-color: #595959 !important;
}
.secondary.darken-1 {
  background-color: #2c2c2c !important;
  border-color: #2c2c2c !important;
}
.secondary--text.text--darken-1 {
  color: #2c2c2c !important;
}
.secondary--text.text--darken-1 input,
.secondary--text.text--darken-1 textarea {
  caret-color: #2c2c2c !important;
}
.secondary.darken-2 {
  background-color: #171717 !important;
  border-color: #171717 !important;
}
.secondary--text.text--darken-2 {
  color: #171717 !important;
}
.secondary--text.text--darken-2 input,
.secondary--text.text--darken-2 textarea {
  caret-color: #171717 !important;
}
.secondary.darken-3 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-3 {
  color: #000000 !important;
}
.secondary--text.text--darken-3 input,
.secondary--text.text--darken-3 textarea {
  caret-color: #000000 !important;
}
.secondary.darken-4 {
  background-color: #000000 !important;
  border-color: #000000 !important;
}
.secondary--text.text--darken-4 {
  color: #000000 !important;
}
.secondary--text.text--darken-4 input,
.secondary--text.text--darken-4 textarea {
  caret-color: #000000 !important;
}
.accent {
  background-color: #82b1ff !important;
  border-color: #82b1ff !important;
}
.accent--text {
  color: #82b1ff !important;
}
.accent--text input,
.accent--text textarea {
  caret-color: #82b1ff !important;
}
.accent.lighten-1 {
  background-color: #ffffff !important;
  border-color: #ffffff !important;
}
.accent--text.text--lighten-1 {
  color: #ffffff !important;
}
.accent--text.text--lighten-1 input,
.accent--text.text--lighten-1 textarea {
  caret-color: #ffffff !important;
}
.accent.lighten-2 {
  background-color: #f8ffff !important;
  border-color: #f8ffff !important;
}
.accent--text.text--lighten-2 {
  color: #f8ffff !important;
}
.accent--text.text--lighten-2 input,
.accent--text.text--lighten-2 textarea {
  caret-color: #f8ffff !important;
}
.accent.lighten-3 {
  background-color: #daffff !important;
  border-color: #daffff !important;
}
.accent--text.text--lighten-3 {
  color: #daffff !important;
}
.accent--text.text--lighten-3 input,
.accent--text.text--lighten-3 textarea {
  caret-color: #daffff !important;
}
.accent.lighten-4 {
  background-color: #bce8ff !important;
  border-color: #bce8ff !important;
}
.accent--text.text--lighten-4 {
  color: #bce8ff !important;
}
.accent--text.text--lighten-4 input,
.accent--text.text--lighten-4 textarea {
  caret-color: #bce8ff !important;
}
.accent.lighten-5 {
  background-color: #9fccff !important;
  border-color: #9fccff !important;
}
.accent--text.text--lighten-5 {
  color: #9fccff !important;
}
.accent--text.text--lighten-5 input,
.accent--text.text--lighten-5 textarea {
  caret-color: #9fccff !important;
}
.accent.darken-1 {
  background-color: #6596e2 !important;
  border-color: #6596e2 !important;
}
.accent--text.text--darken-1 {
  color: #6596e2 !important;
}
.accent--text.text--darken-1 input,
.accent--text.text--darken-1 textarea {
  caret-color: #6596e2 !important;
}
.accent.darken-2 {
  background-color: #467dc6 !important;
  border-color: #467dc6 !important;
}
.accent--text.text--darken-2 {
  color: #467dc6 !important;
}
.accent--text.text--darken-2 input,
.accent--text.text--darken-2 textarea {
  caret-color: #467dc6 !important;
}
.accent.darken-3 {
  background-color: #2364aa !important;
  border-color: #2364aa !important;
}
.accent--text.text--darken-3 {
  color: #2364aa !important;
}
.accent--text.text--darken-3 input,
.accent--text.text--darken-3 textarea {
  caret-color: #2364aa !important;
}
.accent.darken-4 {
  background-color: #004c90 !important;
  border-color: #004c90 !important;
}
.accent--text.text--darken-4 {
  color: #004c90 !important;
}
.accent--text.text--darken-4 input,
.accent--text.text--darken-4 textarea {
  caret-color: #004c90 !important;
}
.error {
  background-color: #ff5252 !important;
  border-color: #ff5252 !important;
}
.error--text {
  color: #ff5252 !important;
}
.error--text input,
.error--text textarea {
  caret-color: #ff5252 !important;
}
.error.lighten-1 {
  background-color: #ffe4d5 !important;
  border-color: #ffe4d5 !important;
}
.error--text.text--lighten-1 {
  color: #ffe4d5 !important;
}
.error--text.text--lighten-1 input,
.error--text.text--lighten-1 textarea {
  caret-color: #ffe4d5 !important;
}
.error.lighten-2 {
  background-color: #ffc6b9 !important;
  border-color: #ffc6b9 !important;
}
.error--text.text--lighten-2 {
  color: #ffc6b9 !important;
}
.error--text.text--lighten-2 input,
.error--text.text--lighten-2 textarea {
  caret-color: #ffc6b9 !important;
}
.error.lighten-3 {
  background-color: #ffa99e !important;
  border-color: #ffa99e !important;
}
.error--text.text--lighten-3 {
  color: #ffa99e !important;
}
.error--text.text--lighten-3 input,
.error--text.text--lighten-3 textarea {
  caret-color: #ffa99e !important;
}
.error.lighten-4 {
  background-color: #ff8c84 !important;
  border-color: #ff8c84 !important;
}
.error--text.text--lighten-4 {
  color: #ff8c84 !important;
}
.error--text.text--lighten-4 input,
.error--text.text--lighten-4 textarea {
  caret-color: #ff8c84 !important;
}
.error.lighten-5 {
  background-color: #ff6f6a !important;
  border-color: #ff6f6a !important;
}
.error--text.text--lighten-5 {
  color: #ff6f6a !important;
}
.error--text.text--lighten-5 input,
.error--text.text--lighten-5 textarea {
  caret-color: #ff6f6a !important;
}
.error.darken-1 {
  background-color: #df323b !important;
  border-color: #df323b !important;
}
.error--text.text--darken-1 {
  color: #df323b !important;
}
.error--text.text--darken-1 input,
.error--text.text--darken-1 textarea {
  caret-color: #df323b !important;
}
.error.darken-2 {
  background-color: #bf0025 !important;
  border-color: #bf0025 !important;
}
.error--text.text--darken-2 {
  color: #bf0025 !important;
}
.error--text.text--darken-2 input,
.error--text.text--darken-2 textarea {
  caret-color: #bf0025 !important;
}
.error.darken-3 {
  background-color: #9f0010 !important;
  border-color: #9f0010 !important;
}
.error--text.text--darken-3 {
  color: #9f0010 !important;
}
.error--text.text--darken-3 input,
.error--text.text--darken-3 textarea {
  caret-color: #9f0010 !important;
}
.error.darken-4 {
  background-color: #800000 !important;
  border-color: #800000 !important;
}
.error--text.text--darken-4 {
  color: #800000 !important;
}
.error--text.text--darken-4 input,
.error--text.text--darken-4 textarea {
  caret-color: #800000 !important;
}
.info {
  background-color: #2196f3 !important;
  border-color: #2196f3 !important;
}
.info--text {
  color: #2196f3 !important;
}
.info--text input,
.info--text textarea {
  caret-color: #2196f3 !important;
}
.info.lighten-1 {
  background-color: #d4ffff !important;
  border-color: #d4ffff !important;
}
.info--text.text--lighten-1 {
  color: #d4ffff !important;
}
.info--text.text--lighten-1 input,
.info--text.text--lighten-1 textarea {
  caret-color: #d4ffff !important;
}
.info.lighten-2 {
  background-color: #b5ffff !important;
  border-color: #b5ffff !important;
}
.info--text.text--lighten-2 {
  color: #b5ffff !important;
}
.info--text.text--lighten-2 input,
.info--text.text--lighten-2 textarea {
  caret-color: #b5ffff !important;
}
.info.lighten-3 {
  background-color: #95e8ff !important;
  border-color: #95e8ff !important;
}
.info--text.text--lighten-3 {
  color: #95e8ff !important;
}
.info--text.text--lighten-3 input,
.info--text.text--lighten-3 textarea {
  caret-color: #95e8ff !important;
}
.info.lighten-4 {
  background-color: #75ccff !important;
  border-color: #75ccff !important;
}
.info--text.text--lighten-4 {
  color: #75ccff !important;
}
.info--text.text--lighten-4 input,
.info--text.text--lighten-4 textarea {
  caret-color: #75ccff !important;
}
.info.lighten-5 {
  background-color: #51b0ff !important;
  border-color: #51b0ff !important;
}
.info--text.text--lighten-5 {
  color: #51b0ff !important;
}
.info--text.text--lighten-5 input,
.info--text.text--lighten-5 textarea {
  caret-color: #51b0ff !important;
}
.info.darken-1 {
  background-color: #007cd6 !important;
  border-color: #007cd6 !important;
}
.info--text.text--darken-1 {
  color: #007cd6 !important;
}
.info--text.text--darken-1 input,
.info--text.text--darken-1 textarea {
  caret-color: #007cd6 !important;
}
.info.darken-2 {
  background-color: #0064ba !important;
  border-color: #0064ba !important;
}
.info--text.text--darken-2 {
  color: #0064ba !important;
}
.info--text.text--darken-2 input,
.info--text.text--darken-2 textarea {
  caret-color: #0064ba !important;
}
.info.darken-3 {
  background-color: #004d9f !important;
  border-color: #004d9f !important;
}
.info--text.text--darken-3 {
  color: #004d9f !important;
}
.info--text.text--darken-3 input,
.info--text.text--darken-3 textarea {
  caret-color: #004d9f !important;
}
.info.darken-4 {
  background-color: #003784 !important;
  border-color: #003784 !important;
}
.info--text.text--darken-4 {
  color: #003784 !important;
}
.info--text.text--darken-4 input,
.info--text.text--darken-4 textarea {
  caret-color: #003784 !important;
}
.success {
  background-color: #4caf50 !important;
  border-color: #4caf50 !important;
}
.success--text {
  color: #4caf50 !important;
}
.success--text input,
.success--text textarea {
  caret-color: #4caf50 !important;
}
.success.lighten-1 {
  background-color: #dcffd6 !important;
  border-color: #dcffd6 !important;
}
.success--text.text--lighten-1 {
  color: #dcffd6 !important;
}
.success--text.text--lighten-1 input,
.success--text.text--lighten-1 textarea {
  caret-color: #dcffd6 !important;
}
.success.lighten-2 {
  background-color: #beffba !important;
  border-color: #beffba !important;
}
.success--text.text--lighten-2 {
  color: #beffba !important;
}
.success--text.text--lighten-2 input,
.success--text.text--lighten-2 textarea {
  caret-color: #beffba !important;
}
.success.lighten-3 {
  background-color: #a2ff9e !important;
  border-color: #a2ff9e !important;
}
.success--text.text--lighten-3 {
  color: #a2ff9e !important;
}
.success--text.text--lighten-3 input,
.success--text.text--lighten-3 textarea {
  caret-color: #a2ff9e !important;
}
.success.lighten-4 {
  background-color: #85e783 !important;
  border-color: #85e783 !important;
}
.success--text.text--lighten-4 {
  color: #85e783 !important;
}
.success--text.text--lighten-4 input,
.success--text.text--lighten-4 textarea {
  caret-color: #85e783 !important;
}
.success.lighten-5 {
  background-color: #69cb69 !important;
  border-color: #69cb69 !important;
}
.success--text.text--lighten-5 {
  color: #69cb69 !important;
}
.success--text.text--lighten-5 input,
.success--text.text--lighten-5 textarea {
  caret-color: #69cb69 !important;
}
.success.darken-1 {
  background-color: #2d9437 !important;
  border-color: #2d9437 !important;
}
.success--text.text--darken-1 {
  color: #2d9437 !important;
}
.success--text.text--darken-1 input,
.success--text.text--darken-1 textarea {
  caret-color: #2d9437 !important;
}
.success.darken-2 {
  background-color: #00791e !important;
  border-color: #00791e !important;
}
.success--text.text--darken-2 {
  color: #00791e !important;
}
.success--text.text--darken-2 input,
.success--text.text--darken-2 textarea {
  caret-color: #00791e !important;
}
.success.darken-3 {
  background-color: #006000 !important;
  border-color: #006000 !important;
}
.success--text.text--darken-3 {
  color: #006000 !important;
}
.success--text.text--darken-3 input,
.success--text.text--darken-3 textarea {
  caret-color: #006000 !important;
}
.success.darken-4 {
  background-color: #004700 !important;
  border-color: #004700 !important;
}
.success--text.text--darken-4 {
  color: #004700 !important;
}
.success--text.text--darken-4 input,
.success--text.text--darken-4 textarea {
  caret-color: #004700 !important;
}
.warning {
  background-color: #ffc107 !important;
  border-color: #ffc107 !important;
}
.warning--text {
  color: #ffc107 !important;
}
.warning--text input,
.warning--text textarea {
  caret-color: #ffc107 !important;
}
.warning.lighten-1 {
  background-color: #ffffae !important;
  border-color: #ffffae !important;
}
.warning--text.text--lighten-1 {
  color: #ffffae !important;
}
.warning--text.text--lighten-1 input,
.warning--text.text--lighten-1 textarea {
  caret-color: #ffffae !important;
}
.warning.lighten-2 {
  background-color: #ffff91 !important;
  border-color: #ffff91 !important;
}
.warning--text.text--lighten-2 {
  color: #ffff91 !important;
}
.warning--text.text--lighten-2 input,
.warning--text.text--lighten-2 textarea {
  caret-color: #ffff91 !important;
}
.warning.lighten-3 {
  background-color: #ffff74 !important;
  border-color: #ffff74 !important;
}
.warning--text.text--lighten-3 {
  color: #ffff74 !important;
}
.warning--text.text--lighten-3 input,
.warning--text.text--lighten-3 textarea {
  caret-color: #ffff74 !important;
}
.warning.lighten-4 {
  background-color: #fff956 !important;
  border-color: #fff956 !important;
}
.warning--text.text--lighten-4 {
  color: #fff956 !important;
}
.warning--text.text--lighten-4 input,
.warning--text.text--lighten-4 textarea {
  caret-color: #fff956 !important;
}
.warning.lighten-5 {
  background-color: #ffdd37 !important;
  border-color: #ffdd37 !important;
}
.warning--text.text--lighten-5 {
  color: #ffdd37 !important;
}
.warning--text.text--lighten-5 input,
.warning--text.text--lighten-5 textarea {
  caret-color: #ffdd37 !important;
}
.warning.darken-1 {
  background-color: #e0a600 !important;
  border-color: #e0a600 !important;
}
.warning--text.text--darken-1 {
  color: #e0a600 !important;
}
.warning--text.text--darken-1 input,
.warning--text.text--darken-1 textarea {
  caret-color: #e0a600 !important;
}
.warning.darken-2 {
  background-color: #c18c00 !important;
  border-color: #c18c00 !important;
}
.warning--text.text--darken-2 {
  color: #c18c00 !important;
}
.warning--text.text--darken-2 input,
.warning--text.text--darken-2 textarea {
  caret-color: #c18c00 !important;
}
.warning.darken-3 {
  background-color: #a27300 !important;
  border-color: #a27300 !important;
}
.warning--text.text--darken-3 {
  color: #a27300 !important;
}
.warning--text.text--darken-3 input,
.warning--text.text--darken-3 textarea {
  caret-color: #a27300 !important;
}
.warning.darken-4 {
  background-color: #855a00 !important;
  border-color: #855a00 !important;
}
.warning--text.text--darken-4 {
  color: #855a00 !important;
}
.warning--text.text--darken-4 input,
.warning--text.text--darken-4 textarea {
  caret-color: #855a00 !important;
}
</style>
`;
